@@ -1,3 +1,13 @@
+2007-02-18  Akira TAGOH  <at@gclab.org>
+
+	* donrails/tool/tables-postgresql.sql: set default value to
+	notify_level.
+
+	* donrails/tool/tables-mysql.sql: add notify_level to don_envs.
+
+	* upgrade_1_6.mysql.sql, upgrade_1_6.postgresql.sql:
+	correct default value for notify_level.
+
 2007-02-18  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_edit_picture_{2,3,4}): New test.
